# notepad-plus-plus-linux

./: .gitignore  BACKUP_IMPLEMENTATION_COMPLETE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MACRO_IMPLEMENTATION_COMPLETE.md  README.md  ROADMAP_NEXT_FEATURES.md  SETTINGS_IMPORT_EXPORT_COMPLETE.md  main.cpp
core/: Application.cpp  Application.h  BackupManager.cpp  BackupManager.h  EditorWidget.cpp  EditorWidget.h  EditorWidget_old.cpp  Macro.cpp  Macro.h  MacroManager.cpp  MacroManager.h  MacroStorage.cpp  MacroStorage.h  MainWindow.cpp  MainWindow.h  MainWindow_impl.cpp
data/: notepadplusplus.desktop
data/icons/: generate_icons.sh
docs/: BUILD.md  FEATURES.md
examples/: test_sample.cpp
platform/: LinuxPlatform.cpp  PlatformInterface.h
resources/: resources.qrc
test-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  notepadplusplus-1.0.0
test-build/.qt/: QtDeploySupport.cmake
test-build/notepadplusplus_autogen/: deps
test-build/notepadplusplus_autogen/TAC5DWH4SE/: moc_Application.cpp.d  moc_EditorWidget.cpp.d  moc_MainWindow.cpp  moc_MainWindow.cpp.d
test-build/notepadplusplus_autogen/UYX5XTB5RZ/: moc_DocumentMapPanel.cpp  moc_DocumentMapPanel.cpp.d  moc_DocumentMapWidget.cpp.d  moc_FindInFilesDialog.cpp  moc_FindInFilesDialog.cpp.d  moc_FindReplaceDialog.cpp.d  moc_PreferencesDialog.cpp.d
translations/: convert_translations.py  notepadplusplus_de.qm  notepadplusplus_de.ts
ui/: DocumentMapPanel.cpp  DocumentMapPanel.h  DocumentMapWidget.cpp  DocumentMapWidget.h  FindInFilesDialog.cpp  FindInFilesDialog.h  FindReplaceDialog.cpp  FindReplaceDialog.h  PreferencesDialog.cpp  PreferencesDialog.h
utils/: ConfigManager.cpp  ConfigManager.h
